force-app/main/default/objects/CityReimbursmentType__c/CityReimbursmentType__c.object-meta.xml
<CustomObject>
    <description>Tabella amministrativa per il processo Rimborso TARI</description>
    <label>Tipologia Rimborso Comunale</label>
    <nameField>
        <displayFormat>TRC - {000000}</displayFormat>
        <label>Numero Tipologia Rimborso Comunale</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Tipologie Rimborso Comunale</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>