force-app/main/default/objects/CityReimbursmentType__c/fields/BeneficiaryType__c.field-meta.xml
<CustomField>
    <fullName>BeneficiaryType__c</fullName>
    <label>Tipo beneficiario</label>
    <length>255</length>
    <type>Text</type>
</CustomField>