force-app/main/default/objects/CityReimbursmentType__c/fields/ReimbursmentType__c.field-meta.xml
<CustomField>
    <fullName>ReimbursmentType__c</fullName>
    <label>Tipo rimborso</label>
    <length>255</length>
    <type>Text</type>
</CustomField>